# go-semantic-annotator

./: .gitignore  README.md  pyproject.toml
docs/: manual_annotation_app.md  pairwise_comparison_plan.md  taxonomy.md
examples/: katago_position.json  semantic_annotation.json
src/go_semantic_annotator/: __init__.py  annotation_app.py  annotator.py  cli.py  models.py  normalize.py
tests/: test_annotation_app.py  test_annotator.py  test_models.py  test_normalize.py
