[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "go-semantic-annotator"
version = "0.1.0"
description = "Structured Go move semantics from KataGo analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
go-semantic-annotator = "go_semantic_annotator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/go_semantic_annotator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
